[package]
name = "random_metro_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.6"
flo_curves = "0.6"
gnuplot = "0.0.37"
petgraph = {version = "0.6", features = ["serde-1"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
